fixed spacing issue around heart wrapper

--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -1,9 +1,48 @@
 .copyright {
 	display: flex;
 	gap: 1.3rem;
-	margin: 20px auto 0 auto;
-	background-color: $clr-black;
+	margin: 35px auto 0 auto;
 	justify-content: center;
 	position: relative;
 	left: -36px;
+	padding: 15px 0;
+}
+
+// glowing heart animation
+.glowing-wrapper {
+	display: inline-block;
+	position: relative;
+	top: -3px;
+	padding: 2px;
+	border-radius: 50%;
+	margin: 1px 3px;
+	height: 20px;
+	width: 20px;
+	box-shadow: 0 0 0 0 rgba($clr-pink, 1);
+	transform: scale(1);
+	animation: pulse 2s infinite;
+	img {
+		position: relative;
+		top: 2px;
+		z-index: 20;
+		width: 20px;
+		margin: 0 auto;
+	}
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba($clr-pink, 0.7);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba($clr-pink, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 (rgba($clr-pink, 0));
+	}
 }
