--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -21,7 +21,7 @@
 		width: 331.69px;
 		z-index: 10;
 		border-radius: 50%;
-		filter: drop-shadow(4px 0 0 $clr-pink);
+		filter: drop-shadow(4px 4px 0 $clr-pink);
 	}
 }
 
